--- a/css/flex.css
+++ b/css/flex.css
@@ -1,8 +1,8 @@
 body {
-    cursor: url(http://cur.cursors-4u.net/others/oth-9/oth831.cur), auto !important;
+    cursor: url(http://cur.cursors-4u.net/food/foo-7/foo630.cur), auto !important;
 }
-body a button input form {
-    cursor: url(http://cur.cursors-4u.net/others/oth-9/oth831.cur), pointer !important;
+.column {
+    cursor: url(http://cur.cursors-4u.net/cursors/cur-11/cur1002.cur), auto !important;
 }
 
 /*~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-*/
