--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
     margin: 2px 2px; padding: 4px 1px;
 }
 
-#notice-min, #notice-max, #notice-special, #notice-space, #notice-upCase, #notice-loCase, #notice-num { display: none; }
+#notice-minMax, #notice-special, #notice-space, #notice-upCase, #notice-loCase, #notice-num { display: none; }
 /*footer {
     position: fixed;
     bottom: 0;
