--- a/css/flex.css
+++ b/css/flex.css
@@ -46,4 +46,10 @@
 .center img { margin-left: auto; margin-right: auto; }
 .radius { border-radius: 100%; }
 
+/*~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-*/
 
+.txt-gray { color: darkslategray; }
+
+/*~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-*/
+
+.t1 { font-size: 20px; }
