--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    display: flex; flex-direction: row; background-color: snow;
+    display: flex; flex-direction: column; background-color: snow;
     width: 100vw; height: 100vh; overflow-x: hidden;
     font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
 }
@@ -37,12 +37,10 @@ a {
 .terms{ padding-top: 35px; }
 
 .war {
-    display: block;
+    display: none;
     font-size: 14.5px; color: red;
     margin: 2px 2px; padding: 4px 1px;
 }
-
-#notice-minMax, #notice-special, #notice-space, #notice-upCase, #notice-loCase, #notice-num, #notice-username, #notice-email, #notice-name { display: none; }
 
 header {
     display: flex; flex-direction: row;
@@ -58,3 +56,14 @@ header {
 ::-webkit-scrollbar-track { background: black; }
 ::-webkit-scrollbar-thumb { background: #323232; }
 ::-webkit-scrollbar-thumb:hover { background: #888; }
+
+#socR, #socL { width: 150px; }
+
+.this img { padding: 0 2px; }
+
+@media screen and (max-width: 500px) {
+    .body { margin: 1vh auto; }
+    .busy {
+        width: 56%;
+    }
+}
