--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
-    display: flex; flex-direction: column; background-color: snow;
+    display: flex; flex-direction: column; background-color: ghostwhite;  background-color: ivory;
     width: 100vw; height: 100vh; overflow-x: hidden;
     font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
-}
-.column {
-    cursor: url(http://cur.cursors-4u.net/cursors/cur-11/cur1002.cur), auto !important;
+    cursor: url(../cur1002.cur), auto !important; 
 }
 
+button, input, a {
+    cursor: url(../gam1087.ani), url(../gam1087.png), auto !important;
+}
 .busy {
     width: 300px; height: auto;
     background-color: white; margin: 2vh auto;
@@ -17,21 +18,18 @@ button {
     background-color: black; color: snow;
     border-radius: 5px; border: 1px solid black;
     padding: 5px; font-size: 16.5px; margin-top: 5px; margin-bottom: 15px;
-    cursor: url(http://cur.cursors-4u.net/games/gam-11/gam1087.ani), url(http://cur.cursors-4u.net/games/gam-11/gam1087.png), auto !important;
 }
 
 input {
     background-color: whitesmoke; padding: 6px; 
     border: 1px solid slategray; border-radius: 5px;
     font-size: 17px; margin-bottom: 5px;
-    cursor: url(http://cur.cursors-4u.net/games/gam-11/gam1087.ani), url(http://cur.cursors-4u.net/games/gam-11/gam1087.png), auto !important;
 }
 
 p { font-size: 20px; }
 
 a {
     text-decoration: none; text-transform: bold; color: slateblue;
-    cursor: url(http://cur.cursors-4u.net/games/gam-11/gam1087.ani), url(http://cur.cursors-4u.net/games/gam-11/gam1087.png), auto !important;
 }
 
 .terms{ padding-top: 35px; }
