--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    display: flex; flex-direction: column; background-color: ghostwhite;  background-color: ivory;
+    display: flex; flex-direction: column; background-color: ghostwhite;
     width: 100vw; height: 100vh; overflow-x: hidden;
     font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
     cursor: url(../cur1002.cur), auto !important; 
